<resources>
    <string name="app_name">Enalyzer</string>
    <string name="photo_of_ingredient_label">Photo of ingredient label</string>
    <string name="enalyzer_logo_in_appbar">Enalyzer logo in AppBar</string>
    <string name="possible_hazards_of_current_additive">Possible hazards of current additive</string>
    <string name="additive_switch_prev"><![CDATA[< Previous]]></string>
    <string name="additive_switch_next"><![CDATA[Next >]]></string>
    <string name="list_item_mega_text_size">E221</string>
    <string name="additive_details">Additive details</string>
    <string name="scan_label">Scan label</string>
    <string name="widget_scan_shorctut">Scan shortcut</string>
    <string name="shortcut_to_enalyzer_scan_activity">Shortcut to enalyzer scan activity</string>
    <string name="saving_file">Saving file…</string>
    <string name="please_wait">Please wait…</string>
    <string name="long_additive_about_text">Ammonium carbonate is a salt with the chemical formula (NH4)2CO3. Since it readily degrades to gaseous ammonia…
        Ammonium carbonate is a salt with the chemical formula (NH4)2CO3. Since it readily degrades to gaseous ammonia… Ammonium carbonate is a salt with the chemical formula (NH4)2CO3. Since it readily degrades to gaseous ammonia…</string>
    <string name="read_more">read more</string>
    <string name="chip_button_descr">Shows code in a chip layout</string>
    <string name="loading_local_data">Loading local data</string>
    <string name="no_other_names">No other names</string>
    <string name="known_as_label">Known as</string>
    <string name="about_label">About</string>
    <string name="hazards_label">Hazards</string>
    <string name="no_description">No description</string>
    <string name="no_formula">No formula</string>
    <string name="first_time_setup">Performing first time setup</string>
    <string name="sample_ecode">Hxxx</string>
    <string name="no_statement">No statement</string>
    <string name="no_category">No category</string>
    <string name="no_name">No name</string>
</resources>
